gccida/g2/init_regs
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_regs/src/regclass.c:1081:14: error: use of undeclared identifier 'v16'; did you mean 'v15'?
reg_class ( *v16)[25]; // rbx 
             ^~~
             v15
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_regs/src/regclass.c:1080:20: note: 'v15' declared here
HARD_REG_ELT_TYPE *v15; // r9 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_regs/src/regclass.c:1081:18: error: subscripted value is not an array, pointer, or vector
reg_class ( *v16)[25]; // rbx 
~~~~~~~~~~~~~~~~~^~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_regs/src/regclass.c:1084:14: error: use of undeclared identifier 'v19'
reg_class ( *v19)[25]; // rdx 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_regs/src/regclass.c:1093:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v28; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_regs/src/regclass.c:1081:1: note: enum 'reg_class' is hidden by a non-type declaration of 'reg_class' here
reg_class ( *v16)[25]; // rbx 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_regs/src/regclass.c:1128:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v63; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_regs/src/regclass.c:1081:1: note: enum 'reg_class' is hidden by a non-type declaration of 'reg_class' here
reg_class ( *v16)[25]; // rbx 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_regs/src/regclass.c:1134:14: error: use of undeclared identifier 'v69'; did you mean 'v39'?
reg_class ( *v69)[25]; // r15 
             ^~~
             v39
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_regs/src/regclass.c:1104:6: note: 'v39' declared here
int *v39; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_regs/src/regclass.c:1134:18: error: subscripted value is not an array, pointer, or vector
reg_class ( *v69)[25]; // r15 
~~~~~~~~~~~~~~~~~^~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_regs/src/regclass.c:1136:14: error: use of undeclared identifier 'v71'
reg_class ( *v71)[25]; // rdx 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_regs/src/regclass.c:1140:14: error: use of undeclared identifier 'v75'; did you mean 'v15'?
reg_class ( *v75)[25]; // rdx 
             ^~~
             v15
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_regs/src/regclass.c:1080:20: note: 'v15' declared here
HARD_REG_ELT_TYPE *v15; // r9 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_regs/src/regclass.c:1140:18: error: subscripted value is not an array, pointer, or vector
reg_class ( *v75)[25]; // rdx 
~~~~~~~~~~~~~~~~~^~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_regs/src/regclass.c:1146:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v81; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_regs/src/regclass.c:1154:14: error: use of undeclared identifier 'v89'; did you mean 'v39'?
reg_class ( *v89)[25]; // [rsp+18h] [rbp-B0h] 
             ^~~
             v39
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_regs/src/regclass.c:1104:6: note: 'v39' declared here
int *v39; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_regs/src/regclass.c:1154:18: error: subscripted value is not an array, pointer, or vector
reg_class ( *v89)[25]; // [rsp+18h] [rbp-B0h] 
~~~~~~~~~~~~~~~~~^~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_regs/src/regclass.c:1236:1: error: use of undeclared identifier 'v16'
v16 = reg_class_subunion; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_regs/src/regclass.c:1241:1: error: use of undeclared identifier 'v19'
v19 = v16; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_regs/src/regclass.c:1241:7: error: use of undeclared identifier 'v16'
v19 = v16; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_regs/src/regclass.c:1249:67: error: use of undeclared identifier 'v19'
if ( ( v21 & v23) == 0 && ( v23 & ~reg_class_contents[*( _DWORD *)v19]) != 0 ) 
                                                                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_regs/src/regclass.c:1250:13: error: use of undeclared identifier 'v19'
*( _DWORD *)v19 = m; 
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_regs/src/regclass.c:1253:22: error: expected expression
v19 = ( reg_class ( *)[25])( ( char *)v19 + 4); 
                     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_regs/src/obj/regclass.o] Error 1
